Quick fix for shift scrolling and top bar confusion.

--- a/recources/styles/common.css
+++ b/recources/styles/common.css
@@ -84,7 +84,12 @@ h4 {
 	position: absolute;
 	width: 100%;
 }
-
+.no-scrollbar-parent {
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
+}
 .no-scrollbar-child {
 	background: var(--background-gradient);
 	position: absolute;
@@ -92,7 +97,8 @@ h4 {
 	bottom: 0px;
 	left: 0px;
 	right: var(--sb-width);
-	overflow: auto;
+	overflow-y: scroll;
+	overflow-x: hidden;
 	padding: 0;
 	margin: 0;
 	padding-left: 2px;
